--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   push_to_registry:
-    if: github.repository == 'NKI-GCF/rumidup'
+    ##if: github.repository == 'NKI-GCF/rumidup'
     name: Push Docker image to Docker Hub / GitHub Docker Registry
     runs-on: ubuntu-latest
     steps:
